guides spacing fixes

--- a/packages/portal-style/src/modules/_guides-carousel.scss
+++ b/packages/portal-style/src/modules/_guides-carousel.scss
@@ -1,11 +1,11 @@
 .dp-po-guides-carousel {
   $self: '.dp-po-guides-carousel';
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   background: $grey-lightest;
   min-height: 10px;
 
   &-list {
-    margin: 0 20px;
+    margin: 0 10px;
   }
 
   &-item {
