--- a/packages/portal-style/src/modules/_guides-search.scss
+++ b/packages/portal-style/src/modules/_guides-search.scss
@@ -2,6 +2,7 @@
   background: $white;
   border: 1px solid $grey-light;
   border-radius: 4px;
+  height: 100%;
 
   &-form {
     padding: 20px;
