--- a/packages/portal-style/src/pages/_guides.scss
+++ b/packages/portal-style/src/pages/_guides.scss
@@ -1,5 +1,6 @@
 .dp-po-guides-wrap {
   max-width: 1560px;
+  padding-left: 15px;
 }
 
 .dp-po-guides-contents {
@@ -85,7 +86,7 @@
 
 .dp-po-guides-section {
   box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1);
-  padding: 40px 0;
+  padding: 30px 0;
 }
 
 .dp-po-guides-block {
